# fighi

./: CITATION.cff  LICENSE  README.md  environment.yml  fighi_job.slurm  fighi_jobtped.slurm  merge_pheno_geno.py  merge_pheno_geno_nopandas.py  merge_pheno_genotped.py  pyproject.toml  tped_to_named_csv.py
docs/: ALGORITHM.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DATAFORMATS.md  FAQ.md  QUICKSTART.md  THEORY.md  USAGE.md  readme.md
examples/: README.md  README_examples.md  run_toy_csv.sh  run_toy_tped.sh  toy.phen  toy.sh  toy.tfam  toy.tped  toy_merged.csv
examples/fighi_out/: convert_fighi_to_png.sh  fighi_cytoscape.cyjs  fighi_feature_scores.csv  fighi_hypergraph.gml  fighi_hypergraph.hyper  fighi_log.txt  fighi_model.pkl  fighi_results.csv  fighi_summary.json
fighi_ext/: Snakefile  __init__.py  adaptive.py  annotate_fighi_features.py  apriori.py  fighi_batch.slurm  fighi_job.slurm  fighi_orchestrate.slurm  fisher.py  glm.py  hypergraph.py  knockoff_perm.py  merge_pheno_geno_nopandas.py  pipeline.py  prep_batches.py  reconcile_collect_snps.py  reconcile_run.slurm  report.py  run_cli.py  stability.py  subset_columns.py  tped_to_named_csv.py  utils.py
fighi_ext/benchmarks/: accuracy_eval.py  benchmark_orchestrate.slurm  csv_to_plink.py  filter_csv_by_columns.py  mdr_benchmark.py  readme_benchmarks.md
fighi_ext/examples/: demo_slurm.job  example_linear.py
fighi_ext/logs/: fighi_36948513.err  fighi_36948513.out  (+2 more)
logs/: fighitped_36940257.err  fighitped_36940257.out  fighitped_36942757.err  fighitped_36942757.out  fighitped_36942759.err  fighitped_36942759.out
(+10 files in other folders)
