[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fighi"
version = "0.1.0"
description = "Fisher-Information–Guided Hyperinteraction Inference"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
dependencies = ["numpy","pandas","scipy","matplotlib","statsmodels"]

[project.urls]
Homepage = "https://github.com/1234-Ariel-code/FIGHI"
